change cover image types

--- a/_posts/2015-01-14-gnu-hurd.md
+++ b/_posts/2015-01-14-gnu-hurd.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "گنو هرد، فراتر از لینوکس"
-cover: "2015-01-14/cover.svg"
+cover: "2015-01-14/cover.png"
 categories: [GNU]
 tags: [GNU, Linux, HURD, GNU/Linux, GNU/HURD, kerel, microkernel, monilithic kernel, hybrid kernel, Stallman, RMS]
 ---
