--- a/_posts/2016-01-15-copyleft.md
+++ b/_posts/2016-01-15-copyleft.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "کپی‌لفت: آرمانگرایی عملگرایانه"
-cover: "2016-01-15/copyleft_logo.svg"
+cover: "2016-01-15/cover.png"
 categories: [GNU]
 tags: [gnu, license, copyright, copyleft, free software]
 ---
